--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -381,6 +381,7 @@ body {
   body {
     margin: 0;
     background-color: none;
+    width: 100%;
   }
   .container {
         grid-template-areas: 'header header' 'egg  egg' 'uppersec uppersec' 'redcup redcup' 'uppersec2 uppersec2' 'cherry cherry' 'oranges oranges' 'midsec midsec' 'firstimg secondimg' 'thirdimg fourimg' 'footer footer';
@@ -391,7 +392,7 @@ body {
     -ms-grid-column-span: 2;
     grid-area: header;
     height: 670px;
-    width: 103vw;
+    width: 108vw;
     background-size: 200% 100%;
     background-position: -200px 0px;
     background-repeat: no-repeat;
@@ -510,7 +511,7 @@ body {
     grid-area: uppersec;
     margin: 0 auto;
     margin-left: 0em;
-    width: 103vw;
+    width: 108vw;
   }
   .area-1-header {
     width: 80%;
@@ -539,7 +540,7 @@ body {
     margin-left: 0em;
   }
   .area-2 {
-    width: 103vw;
+    width: 108vw;
     -ms-grid-row: 2;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
@@ -551,7 +552,7 @@ body {
     height: 500px;
   }
   .area-3 {
-    width: 103vw;
+    width: 108vw;
     -ms-grid-row: 4;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
@@ -562,7 +563,7 @@ body {
     height: 500px;
   }
   .area-4 {
-    width: 103vw;
+    width: 108vw;
     -ms-grid-row: 5;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
@@ -586,7 +587,7 @@ body {
     background-position: -200px 0px;
   }
   .area-5 {
-    width: 103vw;
+    width: 108vw;
     -ms-grid-row: 6;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
@@ -601,7 +602,7 @@ body {
     background-position: -220px 0px;
   }
   .area-6 {
-    width: 103vw;
+    width: 108vw;
     -ms-grid-row: 7;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
@@ -609,7 +610,7 @@ body {
     height: 700px;
   }
   .client-testimonials {
-    width: 103vw;
+    width: 108vw;
     -ms-grid-row: 8;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
@@ -683,7 +684,7 @@ body {
     width: 100%;
   }
   .main-footer {
-    width: 103vw;
+    width: 108vw;
     background-color: #458c7e;
     -ms-grid-row: 11;
     -ms-grid-column: 1;
