--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -29,8 +29,9 @@ body {
   display: -ms-flexbox;
   display: flex;
   background-image: url(../../images/desktop/image-header.jpg);
-  background-size: cover;
-  background-position: -40px 0px;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: 0px 100%;
 }
 
 .main-header .first-h3 {
@@ -50,12 +51,11 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: -80px 0px;
 }
 
 .main-header .main-nav-li {
+  height: 40px;
+  width: 97%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -86,9 +86,7 @@ body {
 }
 
 .main-header .top-h1 {
-  margin-left: 5em;
-  margin-top: 1em;
-  margin-bottom: 10em;
+  margin-bottom: 7em;
   color: white;
   letter-spacing: 3px;
   font-size: 2.25rem;
@@ -97,8 +95,12 @@ body {
 .main-header .arrow-down {
   width: 30px;
   position: relative;
-  top: -14em;
-  right: -21em;
+  bottom: 12em;
+  left: 8em;
+}
+
+.main-header .top-h1-pos {
+  margin: 0 auto;
 }
 
 .main-header .menu-btn {
@@ -131,16 +133,18 @@ body {
 
 .area-1-a {
   display: block;
-  margin-top: 3em;
+  margin-top: 6em;
   text-decoration: none;
   color: #5a636c;
   font-weight: bold;
   margin-left: 3em;
+  margin-bottom: 6em;
+  height: 10px;
 }
 
 .area-1-a:hover {
   border-radius: 10px;
-  height: 7px;
+  height: 10px;
   width: 128px;
   -webkit-box-shadow: 0 13px 0 0 #fad400;
           box-shadow: 0 13px 0 0 #fad400;
@@ -148,7 +152,7 @@ body {
 
 .area-1-a1:hover {
   border-radius: 10px;
-  height: 7px;
+  height: 10px;
   width: 128px;
   -webkit-box-shadow: 0 13px 0 0 #fe7867;
           box-shadow: 0 13px 0 0 #fe7867;
@@ -163,7 +167,8 @@ body {
   background-image: url(../../images/desktop/image-transform.jpg);
   background-position: -50px 0px;
   background-size: cover;
-  height: 500px;
+  height: auto;
+  width: 100%;
 }
 
 .area-3 {
@@ -173,8 +178,9 @@ body {
   grid-area: redcup;
   background-image: url(../../images/desktop/image-stand-out.jpg);
   background-size: cover;
-  background-position: -50px 0px;
-  height: 500px;
+  background-position: 50% 0px;
+  height: auto;
+  width: 100%;
 }
 
 .area-4 {
@@ -193,7 +199,8 @@ body {
 }
 
 .graphic-d {
-  height: 400px;
+  height: auto;
+  width: 100%;
   background-image: url(../../images/desktop/image-graphic-design.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -210,6 +217,7 @@ body {
   margin: 0 auto;
   width: 300px;
   margin-top: 1em;
+  margin-bottom: 2em;
   text-align: center;
   font-size: 1rem;
   font-family: "Barlow",'seriff';
@@ -224,7 +232,8 @@ body {
 }
 
 .photography {
-  height: 400px;
+  height: auto;
+  width: 100%;
   background-image: url(../../images/desktop/image-photography.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -377,7 +386,7 @@ body {
   cursor: pointer;
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 450px) {
   body {
     margin: 0;
     background-color: none;
@@ -394,8 +403,7 @@ body {
     height: 670px;
     width: 108vw;
     background-size: 200% 100%;
-    background-position: -200px 0px;
-    background-repeat: no-repeat;
+    background-position: 50% 0px;
   }
   .main-header .first-h3 {
     font-size: 2rem;
@@ -484,7 +492,7 @@ body {
     width: 40px;
     margin: 0 auto;
     top: 3em;
-    right: 5em;
+    left: 0.5em;
   }
   .main-header .menu-pos {
     display: -webkit-box;
