--- a/styles.scss
+++ b/styles.scss
@@ -27,7 +27,7 @@ body{
  
 }
 .container{
-  margin:0 auto;
+  //margin:0 auto;
    
     background-color:none;
     display:grid;
@@ -364,11 +364,10 @@ body{
     body{
         margin:0;
         background-color:none;
-        width: 100%;
-       
+       width: 100%;
     }
     .container{
-        
+       
         grid-template-areas:
         'header header'
         'egg  egg'
@@ -382,13 +381,13 @@ body{
         'thirdimg fourimg'
         'footer footer'
     ;
-
+    width: 100%;
     }
 
 .main-header{
     grid-area:header;
     height: 670px;
-    width: 108vw;
+    width: 100vw;
     background-size: 200% 100%;
     background-position: 50% 0px;
    // background-repeat: no-repeat;
@@ -513,7 +512,7 @@ body{
         grid-area:uppersec;
         margin: 0 auto;
         margin-left: 0em;
-        width: 108vw;
+        width: 100vw;
     }
 
     .area-1-header{
@@ -567,7 +566,7 @@ body{
     }
 
     .area-2{
-        width: 108vw;
+        width: 100vw;
         grid-area:egg;
         background-color: blue;
         background-image: url(../../images/desktop/image-transform.jpg);
@@ -576,7 +575,7 @@ body{
         height: 500px; 
     }
     .area-3{
-        width: 108vw;
+        width: 100vw;
         grid-area:redcup;
         background-image: url(../../images/desktop/image-stand-out.jpg);
         background-size: cover;
@@ -585,7 +584,7 @@ body{
     }
 
     .area-4{
-        width: 108vw;
+        width: 100vw;
       grid-area:uppersec2;
       margin: 0 auto;
       margin-left: 0em;
@@ -610,7 +609,7 @@ body{
       }
 
     .area-5{
-        width: 108vw;
+        width: 100vw;
         grid-area:cherry;
         height: 700px;  
     }
@@ -624,13 +623,13 @@ body{
       }
 
     .area-6{
-        width: 108vw;
+        width: 100vw;
         grid-area: oranges;
         height: 700px;
     }
 
     .client-testimonials{
-        width: 108vw;
+        width: 100vw;
         grid-area:midsec;
         text-align: center;
 
@@ -698,7 +697,7 @@ body{
     }
 
     .main-footer{
-        width: 108vw;
+        width: 100vw;
         background-color:$Dark-moderate-cyan;
         grid-area:footer;
     
