--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -587,7 +587,7 @@ body {
     grid-area: redcup;
     background-image: url(../../images/desktop/image-stand-out.jpg);
     background-size: cover;
-    background-position: -100px 0px;
+    background-position: 50% 0px;
     height: 500px;
   }
   .area-4 {
@@ -605,8 +605,8 @@ body {
     margin-top: 15em;
   }
   .area-5-p {
-    width: 400px;
-    font-size: 1.1rem;
+    width: 80%;
+    font-size: 1rem;
     line-height: 1.5rem;
   }
   .graphic-d {
