--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -435,7 +435,7 @@ body {
         -ms-flex-align: center;
             align-items: center;
     font-size: 1.3rem;
-    margin-top: 1.8em;
+    margin-top: 1.5em;
     margin-left: -7em;
     background-color: white;
     height: 300px;
@@ -480,25 +480,25 @@ body {
     text-align: center;
   }
   .main-header .top-h1-pos {
-    margin-left: -3em;
+    margin-top: 18em;
+    margin-left: -9.8em;
   }
   .main-header .top-h1 {
     background-color: none;
-    margin: 0 auto;
     margin-top: -21em;
     position: relative;
-    right: 3.5em;
-    font-size: 1rem;
+    font-size: 2rem;
+    width: 100%;
     text-align: center;
-    line-height: 50px;
-    letter-spacing: 10px;
+    line-height: 40px;
+    letter-spacing: 5px;
   }
   .main-header .arrow-down {
     display: block;
     width: 40px;
     margin: 0 auto;
-    top: 3em;
-    left: -3em;
+    top: -10em;
+    left: -0.3em;
   }
   .main-header .menu-pos {
     display: -webkit-box;
