--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -6,13 +6,14 @@
 }
 
 body {
+  max-width: 900px;
+  margin: 0 auto;
   font-size: 18px;
   font-family: 'Barlow', sans-serif;
   font-family: 'Fraunces', serif;
 }
 
 .container {
-  background-color: none;
   display: -ms-grid;
   display: grid;
       grid-template-areas: 'header header header header' 'uppersec uppersec egg egg ' 'redcup redcup  uppersec2 uppersec2' 'cherry  cherry oranges oranges' 'midsec midsec midsec midsec' 'firstimg secondimg thirdimg fourimg' 'footer footer footer footer';
@@ -23,6 +24,7 @@ body {
   -ms-grid-column: 1;
   -ms-grid-column-span: 4;
   grid-area: header;
+  height: 500px;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -30,15 +32,6 @@ body {
   background-image: url(../../images/desktop/image-header.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  background-position: 0px 100%;
-}
-
-.main-header .first-h3 {
-  font-family: 'Barlow', Serif;
-  height: 50px;
-  color: white;
-  margin-left: 1em;
-  margin-top: 1em;
 }
 
 .main-header .main-nav {
@@ -53,8 +46,32 @@ body {
 }
 
 .main-header .main-nav-pos {
-  width: 95%;
-  background-color: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  height: 50px;
+  width: 100%;
+  margin-top: 1em;
+}
+
+.main-header .first-h3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 800;
+  font-family: 'Barlow', Serif;
+  width: 100%;
+  color: white;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-left: 1em;
 }
 
 .main-header .main-nav-li {
@@ -64,52 +81,71 @@ body {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  background-color: none;
-  height: 40px;
-  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-family: 'Barlow', serif;
   list-style: none;
-  margin-bottom: 2em;
-  margin-right: 1em;
-  margin-top: 1em;
   font-size: 1rem;
+  margin-right: 1em;
 }
 
-.main-header .main-nav-li li {
-  color: white;
-  background-color: none;
-  margin-left: 3em;
+.main-header .main-nav-li li a {
+  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-}
-
-.main-header .main-nav-li li:hover {
-  background-color: skyblue;
-  font-family: 'Fraunces', sans-serif;
-  width: 85px;
-  padding: 10px;
-  border-radius: 30px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 89px;
   text-align: center;
-  cursor: pointer;
-}
-
-.main-header .top-h1 {
-  margin-bottom: 7em;
   color: white;
-  letter-spacing: 3px;
-  font-size: 2.25rem;
+  margin-left: 1em;
+  padding: 11px;
+  text-decoration: none;
 }
 
-.main-header .arrow-down {
-  width: 30px;
-  position: relative;
-  bottom: 12em;
-  left: 8em;
+.main-header .active {
+  display: block;
+  background-color: skyblue;
+  text-align: center;
+  width: 80%;
+  padding: 11px;
+  border-radius: 30px;
+  font-family: 'Fraunces', sans-serif;
+}
+
+.main-header .main-nav-li li a:hover {
+  background-color: white;
+  color: #23303e;
+  font-family: 'Fraunces', sans-serif;
+  width: 89px;
+  text-align: center;
+  padding: 11px;
+  border-radius: 30px;
+  cursor: pointer;
 }
 
 .main-header .top-h1-pos {
   margin: 0 auto;
+  margin-top: 3em;
+}
+
+.main-header .top-h1 {
+  color: white;
+  letter-spacing: 5px;
+  font-size: 2.25rem;
+}
+
+.main-header .arrow-down {
+  width: 24px;
+  position: relative;
+  top: 3em;
+  left: 12.5em;
 }
 
 .main-header .menu-btn {
@@ -122,49 +158,48 @@ body {
   -ms-grid-column-span: 2;
   grid-area: uppersec;
   background-color: white;
+  margin: 15.5%;
 }
 
 .area-1-header {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   font-weight: bold;
-  margin-top: 2em;
-  margin-left: 1em;
+  margin-top: 1em;
 }
 
 .area-1-para {
   font-family: "Barlow",'seriff';
-  font-size: 1rem;
-  line-height: 2em;
+  font-size: 0.8rem;
+  line-height: 1.5em;
   color: #a7abae;
-  margin-top: 3em;
-  margin-left: 3em;
+  margin-top: 1.5em;
 }
 
 .area-1-a {
   display: block;
-  margin-top: 6em;
+  font-size: 0.8rem;
+  margin-top: 2em;
   text-decoration: none;
-  color: #5a636c;
+  color: #23303e;
   font-weight: bold;
-  margin-left: 3em;
-  margin-bottom: 6em;
   height: 10px;
+  width: 100px;
 }
 
 .area-1-a:hover {
   border-radius: 10px;
   height: 10px;
-  width: 128px;
-  -webkit-box-shadow: 0 13px 0 0 #fad400;
-          box-shadow: 0 13px 0 0 #fad400;
+  width: 100px;
+  -webkit-box-shadow: -5px 9px 2px 0px #fad400;
+          box-shadow: -5px 9px 2px 0px #fad400;
 }
 
 .area-1-a1:hover {
   border-radius: 10px;
   height: 10px;
-  width: 128px;
-  -webkit-box-shadow: 0 13px 0 0 #fe7867;
-          box-shadow: 0 13px 0 0 #fe7867;
+  width: 100px;
+  -webkit-box-shadow: -5px 9px 2px 0px #fe7867;
+          box-shadow: -5px 9px 2px 0px #fe7867;
 }
 
 .area-2 {
@@ -172,12 +207,6 @@ body {
   -ms-grid-column: 3;
   -ms-grid-column-span: 2;
   grid-area: egg;
-  background-color: blue;
-  background-image: url(../../images/desktop/image-transform.jpg);
-  background-position: -50px 0px;
-  background-size: cover;
-  height: auto;
-  width: 100%;
 }
 
 .area-3 {
@@ -185,11 +214,6 @@ body {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-area: redcup;
-  background-image: url(../../images/desktop/image-stand-out.jpg);
-  background-size: cover;
-  background-position: 50% 0px;
-  height: auto;
-  width: 100%;
 }
 
 .area-4 {
@@ -198,6 +222,7 @@ body {
   -ms-grid-column-span: 2;
   grid-area: uppersec2;
   background-color: white;
+  margin: 15.5%;
 }
 
 .area-5 {
@@ -208,28 +233,35 @@ body {
 }
 
 .graphic-d {
-  height: auto;
-  width: 100%;
   background-image: url(../../images/desktop/image-graphic-design.jpg);
-  background-repeat: no-repeat;
   background-size: cover;
-  background-position: 0px 0px;
 }
 
 .area-5-h {
   text-align: center;
+  color: #25564b;
   margin-top: 12em;
+}
+
+.area-5-h-2 {
+  color: #23303e;
 }
 
 .area-5-p {
   display: block;
   margin: 0 auto;
-  width: 300px;
   margin-top: 1em;
-  margin-bottom: 2em;
+  width: 60%;
+  margin-bottom: 2.5em;
   text-align: center;
-  font-size: 1rem;
+  font-size: 0.8rem;
+  line-height: 1.5em;
   font-family: "Barlow",'seriff';
+  color: #458c7e;
+}
+
+.area-5-p2 {
+  width: 60%;
   color: #5a636c;
 }
 
@@ -241,12 +273,8 @@ body {
 }
 
 .photography {
-  height: auto;
-  width: 100%;
   background-image: url(../../images/desktop/image-photography.jpg);
-  background-repeat: no-repeat;
   background-size: cover;
-  background-position: 0px 0px;
 }
 
 .client-testimonials {
@@ -267,9 +295,11 @@ body {
 }
 
 .client-testimonials .client-h {
+  font-size: 1rem;
+  letter-spacing: 0.2em;
   margin-top: 6em;
   margin-bottom: 3em;
-  color: #5a636c;
+  color: #a7abae;
 }
 
 .client-testimonials .img-people {
@@ -295,6 +325,7 @@ body {
 .client-testimonials .people .para {
   color: #818498;
   font-family: "Barlow", "Seriff";
+  margin: 1em;
   margin-bottom: 4em;
   line-height: 1.6em;
   font-size: 0.85rem;
@@ -305,7 +336,7 @@ body {
 }
 
 .client-testimonials .position {
-  color: #818498;
+  color: #a7abae;
   margin-bottom: 8em;
   font-family: "Barlow", "Seriff";
   font-size: 0.9rem;
@@ -315,10 +346,6 @@ body {
   -ms-grid-row: 6;
   -ms-grid-column: 1;
   grid-area: firstimg;
-  background-image: url(../../images/desktop/image-gallery-milkbottles.jpg);
-  background-size: cover;
-  height: 300px;
-  width: 300px;
 }
 
 .lower-img-2 {
@@ -340,8 +367,8 @@ body {
 }
 
 .img-2 {
-  height: auto;
-  width: 100%;
+  height: 100%;
+  max-width: 100%;
 }
 
 .main-footer {
@@ -354,20 +381,20 @@ body {
 
 .main-footer .footer-h3 {
   font-family: "Barlow", "Seriff";
+  color: #25564b;
+  text-align: center;
   font-size: 1.8rem;
   font-weight: 900;
   margin-top: 1.6em;
-  text-align: center;
   margin-bottom: 1em;
-  color: #25564b;
 }
 
 .main-footer .footer-list {
-  text-align: center;
   word-spacing: 1em;
   margin-bottom: 3em;
   font-family: "Barlow", "Seriff";
   color: #25564b;
+  text-align: center;
 }
 
 .main-footer .footer-list li {
@@ -394,45 +421,72 @@ body {
   cursor: pointer;
 }
 
-@media screen and (max-width: 450px) {
-  body {
-    margin: 0;
-    background-color: none;
-    width: 100%;
-  }
+@media only screen and (max-width: 600px) {
   .container {
         grid-template-areas: 'header header' 'egg  egg' 'uppersec uppersec' 'redcup redcup' 'uppersec2 uppersec2' 'cherry cherry' 'oranges oranges' 'midsec midsec' 'firstimg secondimg' 'thirdimg fourimg' 'footer footer';
-    width: 100%;
   }
   .main-header {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: header;
-    height: 670px;
-    width: 100vw;
-    background-size: 200% 100%;
-    background-position: 50% 0px;
+    background-image: url(../../images/mobile/image-header.jpg);
   }
   .main-header .first-h3 {
-    font-size: 2rem;
+    width: 100px;
+    font-size: 1.5rem;
     font-weight: 800;
   }
-  .main-header .main-nav {
+  .main-header .menu-pos {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 100%;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .main-header .menu-btn {
+    width: 25px;
+    display: block;
+    position: relative;
+    z-index: 1;
+    margin-top: 0.9em;
+    margin-right: 1em;
+    font-size: 3rem;
+    cursor: pointer;
+  }
+  .main-header .triangle-base {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 20px;
+    width: 87%;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    margin-top: 1em;
+  }
+  .main-header .triangle {
+    width: 0;
+    height: 0;
+    border-bottom: 47px solid white;
+    border-left: 47px solid transparent;
+    margin-top: 0.6em;
+    visibility: hidden;
+  }
+  .main-header .main-nav-pos {
+    background-color: none;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    height: auto;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: -3.7em;
   }
   .main-header .main-nav-li {
     visibility: hidden;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -444,86 +498,48 @@ body {
         -ms-flex-align: center;
             align-items: center;
     font-size: 1.3rem;
-    margin-top: 1.5em;
-    margin-left: -7em;
+    margin-top: 3em;
+    margin-right: 10em;
     background-color: white;
-    height: 300px;
-    width: 147%;
+    width: 91%;
+    height: 200px;
     position: relative;
     z-index: 1;
   }
-  .main-header .triangle {
-    width: 0;
-    height: 0;
-    border-bottom: 47px solid white;
-    border-left: 47px solid transparent;
-    margin-top: 0.6em;
-    visibility: hidden;
-  }
-  .main-header .triangle-base {
-    margin-left: -3em;
-    background-color: none;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    height: 20px;
-    width: 140%;
-    margin-left: -8.1em;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    margin-top: 1em;
-  }
-  .main-header .main-nav-li li {
+  .main-header .main-nav-li li a {
+    width: 100%;
     color: #a7abae;
     margin: 0 auto;
-    padding: 0.2em;
+    padding: 11px;
   }
-  .main-header .main-nav-li li:hover {
+  .main-header .main-nav-li li a:hover {
     background-color: #fad400;
     font-family: 'Fraunces', sans-serif;
     color: black;
-    width: 180px;
-    padding: 20px;
+    width: 100%;
     border-radius: 35px;
     text-align: center;
   }
+  .main-header .active {
+    font-family: 'Barlow', sans-serif;
+    background-color: transparent;
+  }
   .main-header .top-h1-pos {
-    margin-top: 18em;
-    margin-left: -9.8em;
+    margin: 0 auto;
+    margin-top: -11em;
+    width: 90%;
   }
   .main-header .top-h1 {
-    background-color: none;
-    margin-top: -21em;
-    position: relative;
     font-size: 2rem;
-    width: 100%;
     text-align: center;
     line-height: 40px;
     letter-spacing: 5px;
   }
   .main-header .arrow-down {
     display: block;
-    width: 40px;
+    width: 39px;
     margin: 0 auto;
-    top: -10em;
     left: -0.1em;
-  }
-  .main-header .menu-pos {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-  }
-  .main-header .menu-btn {
-    width: 35px;
-    display: block;
-    margin-top: 0.9em;
-    margin-right: 1em;
-    font-size: 3rem;
-    cursor: pointer;
   }
   .main-header .show {
     visibility: visible;
@@ -534,13 +550,13 @@ body {
     -ms-grid-column-span: 2;
     grid-area: uppersec;
     margin: 0 auto;
+    margin: 0%;
     margin-left: 0em;
-    width: 100vw;
   }
   .area-1-header {
     width: 80%;
     text-align: center;
-    font-size: 2.4rem;
+    font-size: 2.1rem;
     font-weight: bold;
     margin: 0 auto;
     margin-top: 1.5em;
@@ -562,58 +578,47 @@ body {
     margin: 0 auto;
     margin-top: 2em;
     margin-bottom: 4em;
+    border-radius: 10px;
+    -webkit-box-shadow: -5px 9px 2px 0px #fad400;
+            box-shadow: -5px 9px 2px 0px #fad400;
   }
-  .area-1-a:hover {
-    margin-left: 0 auto;
+  .area-1-a1 {
+    display: block;
+    text-align: center;
+    color: #5a636c;
+    font-weight: bold;
+    margin: 0 auto;
     margin-top: 2em;
     margin-bottom: 4em;
     border-radius: 10px;
-    height: 7px;
-    width: 128px;
-    -webkit-box-shadow: 0 13px 0 0 #fad400;
-            box-shadow: 0 13px 0 0 #fad400;
+    -webkit-box-shadow: -5px 9px 2px 0px #fe7867;
+            box-shadow: -5px 9px 2px 0px #fe7867;
   }
   .area-1-a1:hover {
-    margin-left: 0 auto;
-    margin-top: 2em;
-    margin-bottom: 4em;
-    border-radius: 10px;
-    height: 7px;
-    width: 128px;
-    -webkit-box-shadow: 0 13px 0 0 #fe7867;
-            box-shadow: 0 13px 0 0 #fe7867;
+    display: none;
+  }
+  .area-1-1 {
+    display: none;
   }
   .area-2 {
-    width: 100vw;
     -ms-grid-row: 2;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: egg;
-    background-color: blue;
-    background-image: url(../../images/desktop/image-transform.jpg);
-    background-position: -100px 0px;
-    background-size: cover;
-    height: 500px;
   }
   .area-3 {
-    width: 100vw;
     -ms-grid-row: 4;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: redcup;
-    background-image: url(../../images/desktop/image-stand-out.jpg);
-    background-size: cover;
-    background-position: 50% 0px;
-    height: 500px;
   }
   .area-4 {
-    width: 100vw;
     -ms-grid-row: 5;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: uppersec2;
     margin: 0 auto;
-    margin-left: 0em;
+    margin: 0%;
   }
   .area-5-h {
     font-size: 2rem;
@@ -626,12 +631,10 @@ body {
     line-height: 1.5rem;
   }
   .graphic-d {
-    height: 400px;
-    background-size: cover;
-    background-position: -200px 0px;
+    background-image: url(../../images/mobile/image-graphic-design.jpg);
+    background-size: 100% 100%;
   }
   .area-5 {
-    width: 100vw;
     -ms-grid-row: 6;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
@@ -639,14 +642,10 @@ body {
     height: 700px;
   }
   .photography {
-    height: 400px;
-    background-image: url(../../images/desktop/image-photography.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: -220px 0px;
+    background-image: url(../../images/mobile/image-photography.jpg);
+    background-size: 100% 100%;
   }
   .area-6 {
-    width: 100vw;
     -ms-grid-row: 7;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
@@ -654,7 +653,6 @@ body {
     height: 700px;
   }
   .client-testimonials {
-    width: 100vw;
     -ms-grid-row: 8;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
@@ -669,14 +667,6 @@ body {
   .client-testimonials .img-people {
     width: 60px;
     border-radius: 50%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    margin: 0 auto;
     margin-bottom: 2em;
   }
   .client-testimonials .people {
@@ -688,7 +678,7 @@ body {
   .client-testimonials .people .para {
     margin: 0 auto;
     width: 80%;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     margin-bottom: 2em;
     line-height: 1.5em;
   }
@@ -700,67 +690,37 @@ body {
     font-size: 1rem;
   }
   .lower-img-1 {
-    width: 23vw;
     -ms-grid-row: 9;
     -ms-grid-column: 1;
     grid-area: firstimg;
   }
   .lower-img-2 {
-    width: 23vw;
     -ms-grid-row: 9;
     -ms-grid-column: 2;
     grid-area: secondimg;
   }
   .lower-img-3 {
-    width: 23vw;
     -ms-grid-row: 10;
     -ms-grid-column: 1;
     grid-area: thirdimg;
   }
   .lower-img-4 {
-    width: 2vw;
     -ms-grid-row: 10;
     -ms-grid-column: 2;
     grid-area: fourimg;
   }
-  .img-2 {
-    height: auto;
-    width: 100%;
-  }
   .main-footer {
-    width: 100vw;
     background-color: #458c7e;
     -ms-grid-row: 11;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: footer;
   }
-  .main-footer .footer-h3 {
-    font-family: "Barlow", "Seriff";
-    font-size: 1.8rem;
-    font-weight: 900;
-    margin-top: 1.6em;
-    text-align: center;
-    margin-bottom: 1em;
-    color: #25564b;
-  }
   .main-footer .footer-list {
-    text-align: center;
-    word-spacing: 4em;
-    margin-bottom: 4em;
-    font-family: "Barlow", "Seriff";
-    color: #25564b;
-  }
-  .main-footer .footer-list li {
-    display: inline;
+    word-spacing: 3em;
   }
   .main-footer .footer-icons {
-    text-align: center;
     margin-bottom: 4em;
-  }
-  .main-footer .footer-icons li {
-    display: inline;
-    color: #25564b;
   }
 }
 /*# sourceMappingURL=styles.css.map */
