--- a/_variables.scss
+++ b/_variables.scss
@@ -9,3 +9,4 @@ $Very-dark-grayish-blue: hsl(213, 9%, 39%);
 $Dark-grayish-blue: hsl(232, 10%, 55%);
 $Grayish-blue: hsl(210, 4%, 67%);
 $White: hsl(0, 0%, 100%);
+$imageheadercolor: hsl(200, 100%, 61%);
