--- a/sass/css/styles.css
+++ b/sass/css/styles.css
@@ -6,8 +6,6 @@
 }
 
 body {
-  max-width: 900px;
-  margin: 0 auto;
   font-size: 18px;
   font-family: 'Barlow', sans-serif;
   font-family: 'Fraunces', serif;
@@ -29,8 +27,10 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  background-color: #38bdff;
   background-image: url(../../images/desktop/image-header.jpg);
-  background-size: 100% 100%;
+  background-size: 900px 100%;
+  background-position: 50%;
   background-repeat: no-repeat;
 }
 
@@ -369,7 +369,7 @@ body {
 
 .img-2 {
   height: 100%;
-  max-width: 100%;
+  width: 100%;
 }
 
 .main-footer {
